fix: Correct category button localization and data loading

--- a/core/i18n/ru.json
+++ b/core/i18n/ru.json
@@ -40,15 +40,21 @@
   "cards_count": "Карточек",
   "views_count": "Просмотров",
   "qr_scans": "QR сканирований",
-  "category_restaurants": "Рестораны и кафе",
-  "category_spa": "SPA и массаж",
-  "category_transport": "Аренда транспорта",
-  "category_hotels": "Отели",
-  "category_tours": "Экскурсии",
-  "filter_asia": "Азиатская",
-  "filter_europe": "Европейская",
-  "filter_street": "Стрит-фуд",
-  "filter_vege": "Вегетарианская",
-  "filter_all": "Показать все"
+  "category_restaurants": "🍽 Рестораны",
+  "category_spa": "🧖‍♀️ SPA",
+  "category_transport": "🚗 Транспорт",
+  "category_hotels": "🏨 Отели",
+  "category_tours": "🚶‍♂️ Экскурсии",
+  "transport_bikes": "🛵 Байки",
+  "transport_cars": "🚘 Машины",
+  "transport_bicycles": "🚲 Велосипед",
+  "tours_group": "👥 Групповые",
+  "tours_private": "🧑‍🤝‍🧑 Индивидуальные",
+  "back_to_categories": "◀️ Назад",
+  "catalog_found": "Найдено",
+  "catalog_page": "Стр.",
+  "catalog_empty_sub": "📭 В этой подкатегории пока нет заведений.",
+  "transport_choose": "Выберите вид транспорта:",
+  "tours_choose": "Выберите тип экскурсии:",
+  "choose_action": "Выберите действие"
 }
-
