feat: add welcome message with policy acceptance flow and update localization

--- a/core/i18n/en.json
+++ b/core/i18n/en.json
@@ -1,1 +1,69 @@
-{}
+{
+    "back_to_main_menu": "Back to main menu🏘",
+    "choose_category": "🗂️ Categories",
+    "show_nearest": "📍 Show nearest",
+    "choose_language": "🌐 Language",
+    "choose_district": "🌆 By districts",
+    "profile": "👤 Profile",
+    "help": "❓ Help",
+    "add_card": "➕ Add card",
+    "my_cards": "📋 My cards",
+    "card_status_draft": "📝 Draft",
+    "card_status_pending": "⏳ Pending",
+    "card_status_approved": "✅ Approved",
+    "card_status_published": "🎉 Published",
+    "card_status_rejected": "❌ Rejected",
+    "card_status_archived": "🗂️ Archived",
+    "moderation_title": "🔍 Moderation",
+    "approve_card": "✅ Approve",
+    "reject_card": "❌ Reject",
+    "feature_card": "⭐ Feature",
+    "archive_card": "🗂️ Archive",
+    "cancel": "❌ Cancel",
+    "skip": "⏭️ Skip",
+    "back": "🔙 Back",
+    "next": "➡️ Next",
+    "edit": "✏️ Edit",
+    "delete": "🗑️ Delete",
+    "save": "💾 Save",
+    "contact_info": "📞 Contacts",
+    "address_info": "📍 Address",
+    "discount_info": "🎫 Discount",
+    "show_on_map": "🗺️ Show on map",
+    "create_qr": "📱 Create QR",
+    "call_business": "📞 Contact",
+    "book_service": "📅 Book",
+    "help_main": "❓ **Bot Help**\n\n🗂️ **Categories** - browse places by type\n👤 **Profile** - manage your cards\n📍 **Show nearest** - find what's near you\n🌆 **By districts** - select by location\n🌐 **Language** - change interface language\n\n**For partners:**\n/add_card - add a new card\n/my_cards - view your cards\n\n**Support:** @support_bot",
+    "profile_main": "👤 **Profile**",
+    "profile_stats": "📊 Statistics",
+    "profile_settings": "⚙️ Settings",
+    "cards_count": "Cards",
+    "views_count": "Views",
+    "qr_scans": "QR scans",
+    "category_restaurants": "🍽 Restaurants",
+    "category_spa": "🧖‍♀️ SPA",
+    "category_transport": "🚗 Transport",
+    "category_hotels": "🏨 Hotels",
+    "category_tours": "🚶‍♂️ Tours",
+    "transport_bikes": "🛵 Bikes",
+    "transport_cars": "🚘 Cars",
+    "transport_bicycles": "🚲 Bicycles",
+    "tours_group": "👥 Group",
+    "tours_private": "🧑‍🤝‍🧑 Private",
+    "back_to_categories": "◀️ Back",
+    "catalog_found": "Found",
+    "catalog_page": "Page",
+    "catalog_empty_sub": "📭 There are no places in this subcategory yet.",
+    "transport_choose": "Choose transport type:",
+    "tours_choose": "Choose tour type:",
+    "restaurants_choose_cuisine": "Choose cuisine type:",
+    "filter_asia": "Asian",
+    "filter_europe": "European",
+    "filter_street": "Street Food",
+    "filter_vege": "Vegetarian",
+    "filter_all": "Show all",
+    "welcome_message": "{user_name}, welcome to Karma System! 👋\n\n✨ Get exclusive discounts and offers via QR code in convenient categories:\n🍽️ Restaurants & Cafes\n🧖‍♀️ SPA & Massage\n🏍️ Bike Rentals\n🏨 Hotels\n🚶‍♂️ Tours\n\nAnd if you're a business owner, join us as a partner and connect your loyalty system! 🚀\n\nStart saving now - choose a category and get your discounts!\n\nBy continuing to use the bot, you agree to the personal data processing policy.",
+    "policy_accept": "✅ I agree",
+    "policy_view": "📄 Privacy Policy",
+    "policy_url": "https://example.com/privacy"
+}
