--- a/core/i18n/ko.json
+++ b/core/i18n/ko.json
@@ -1,1 +1,69 @@
-{}
+{
+    "back_to_main_menu": "메인 메뉴로 돌아가기🏘",
+    "choose_category": "🗂️ 카테고리",
+    "show_nearest": "📍 가장 가까운 곳 표시",
+    "choose_language": "🌐 언어",
+    "choose_district": "🌆 지역별",
+    "profile": "👤 프로필",
+    "help": "❓ 도움말",
+    "add_card": "➕ 카드 추가",
+    "my_cards": "📋 내 카드",
+    "card_status_draft": "📝 임시 저장",
+    "card_status_pending": "⏳ 대기 중",
+    "card_status_approved": "✅ 승인됨",
+    "card_status_published": "🎉 게시됨",
+    "card_status_rejected": "❌ 거부됨",
+    "card_status_archived": "🗂️ 보관됨",
+    "moderation_title": "🔍 검토",
+    "approve_card": "✅ 승인",
+    "reject_card": "❌ 거절",
+    "feature_card": "⭐ 추천",
+    "archive_card": "🗂️ 보관",
+    "cancel": "❌ 취소",
+    "skip": "⏭️ 건너뛰기",
+    "back": "🔙 뒤로",
+    "next": "➡️ 다음",
+    "edit": "✏️ 편집",
+    "delete": "🗑️ 삭제",
+    "save": "💾 저장",
+    "contact_info": "📞 연락처",
+    "address_info": "📍 주소",
+    "discount_info": "🎫 할인",
+    "show_on_map": "🗺️ 지도에 표시",
+    "create_qr": "📱 QR 생성",
+    "call_business": "📞 연락하기",
+    "book_service": "📅 예약하기",
+    "help_main": "❓ **봇 도움말**\n\n🗂️ **카테고리** - 유형별 장소 찾아보기\n👤 **프로필** - 카드 관리\n📍 **가장 가까운 곳 표시** - 주변 장소 찾기\n🌆 **지역별** - 위치로 선택\n🌐 **언어** - 인터페이스 언어 변경\n\n**파트너용:**\n/add_card - 새 카드 추가\n/my_cards - 내 카드 보기\n\n**지원:** @support_bot",
+    "profile_main": "👤 **프로필**",
+    "profile_stats": "📊 통계",
+    "profile_settings": "⚙️ 설정",
+    "cards_count": "카드",
+    "views_count": "조회수",
+    "qr_scans": "QR 스캔",
+    "category_restaurants": "🍽 레스토랑",
+    "category_spa": "🧖‍♀️ 스파",
+    "category_transport": "🚗 교통",
+    "category_hotels": "🏨 호텔",
+    "category_tours": "🚶‍♂️ 투어",
+    "transport_bikes": "🛵 오토바이",
+    "transport_cars": "🚘 자동차",
+    "transport_bicycles": "🚲 자전거",
+    "tours_group": "👥 그룹",
+    "tours_private": "🧑‍🤝‍🧑 개인",
+    "back_to_categories": "◀️ 뒤로",
+    "catalog_found": "찾음",
+    "catalog_page": "페이지",
+    "catalog_empty_sub": "📭 이 하위 카테고리에는 아직 장소가 없습니다.",
+    "transport_choose": "교통 수단 유형을 선택하세요:",
+    "tours_choose": "투어 유형을 선택하세요:",
+    "restaurants_choose_cuisine": "요리 유형을 선택하세요:",
+    "filter_asia": "아시안",
+    "filter_europe": "유러피안",
+    "filter_street": "길거리 음식",
+    "filter_vege": "채식주의자",
+    "filter_all": "모두 보기",
+    "welcome_message": "{user_name}님, Karma System에 오신 것을 환영합니다! 👋\n\n✨ 편리한 카테고리에서 QR 코드를 통해 독점 할인 및 혜택을 받으세요:\n🍽️ 레스토랑 & 카페\n🧖‍♀️ 스파 & 마사지\n🏍️ 오토바이 대여\n🏨 호텔\n🚶‍♂️ 투어\n\n그리고 사업주라면 파트너로 가입하여 로열티 시스템을 연결하세요! 🚀\n\n지금 바로 절약 시작 - 카테고리를 선택하고 할인을 받으세요!\n\n봇을 계속 사용하면 개인 데이터 처리 정책에 동의하는 것입니다.",
+    "policy_accept": "✅ 동의합니다",
+    "policy_view": "📄 개인정보 처리방침",
+    "policy_url": "https://example.com/privacy"
+}
