--- a/core/i18n/vi.json
+++ b/core/i18n/vi.json
@@ -1,1 +1,69 @@
-{}
+{
+    "back_to_main_menu": "Quay lại menu chính🏘",
+    "choose_category": "🗂️ Danh mục",
+    "show_nearest": "📍 Hiển thị gần nhất",
+    "choose_language": "🌐 Ngôn ngữ",
+    "choose_district": "🌆 Theo quận",
+    "profile": "👤 Hồ sơ",
+    "help": "❓ Trợ giúp",
+    "add_card": "➕ Thêm thẻ",
+    "my_cards": "📋 Thẻ của tôi",
+    "card_status_draft": "📝 Nháp",
+    "card_status_pending": "⏳ Đang chờ",
+    "card_status_approved": "✅ Đã duyệt",
+    "card_status_published": "🎉 Đã xuất bản",
+    "card_status_rejected": "❌ Đã từ chối",
+    "card_status_archived": "🗂️ Lưu trữ",
+    "moderation_title": "🔍 Kiểm duyệt",
+    "approve_card": "✅ Phê duyệt",
+    "reject_card": "❌ Từ chối",
+    "feature_card": "⭐ Nổi bật",
+    "archive_card": "🗂️ Lưu trữ",
+    "cancel": "❌ Hủy",
+    "skip": "⏭️ Bỏ qua",
+    "back": "🔙 Quay lại",
+    "next": "➡️ Tiếp theo",
+    "edit": "✏️ Chỉnh sửa",
+    "delete": "🗑️ Xóa",
+    "save": "💾 Lưu",
+    "contact_info": "📞 Liên hệ",
+    "address_info": "📍 Địa chỉ",
+    "discount_info": "🎫 Giảm giá",
+    "show_on_map": "🗺️ Hiển thị trên bản đồ",
+    "create_qr": "📱 Tạo QR",
+    "call_business": "📞 Liên hệ",
+    "book_service": "📅 Đặt lịch",
+    "help_main": "❓ **Trợ giúp Bot**\n\n🗂️ **Danh mục** - xem các địa điểm theo loại\n👤 **Hồ sơ** - quản lý thẻ của bạn\n📍 **Hiển thị gần nhất** - tìm những gì gần bạn\n🌆 **Theo quận** - chọn theo vị trí\n🌐 **Ngôn ngữ** - thay đổi ngôn ngữ giao diện\n\n**Dành cho đối tác:**\n/add_card - thêm thẻ mới\n/my_cards - xem thẻ của bạn\n\n**Hỗ trợ:** @support_bot",
+    "profile_main": "👤 **Hồ sơ**",
+    "profile_stats": "📊 Thống kê",
+    "profile_settings": "⚙️ Cài đặt",
+    "cards_count": "Thẻ",
+    "views_count": "Lượt xem",
+    "qr_scans": "Lượt quét QR",
+    "category_restaurants": "🍽 Nhà hàng",
+    "category_spa": "🧖‍♀️ SPA",
+    "category_transport": "🚗 Vận chuyển",
+    "category_hotels": "🏨 Khách sạn",
+    "category_tours": "🚶‍♂️ Tour du lịch",
+    "transport_bikes": "🛵 Xe máy",
+    "transport_cars": "🚘 Ô tô",
+    "transport_bicycles": "🚲 Xe đạp",
+    "tours_group": "👥 Theo nhóm",
+    "tours_private": "🧑‍🤝‍🧑 Riêng tư",
+    "back_to_categories": "◀️ Quay lại",
+    "catalog_found": "Đã tìm thấy",
+    "catalog_page": "Trang",
+    "catalog_empty_sub": "📭 Chưa có địa điểm nào trong danh mục phụ này.",
+    "transport_choose": "Chọn loại phương tiện:",
+    "tours_choose": "Chọn loại tour:",
+    "restaurants_choose_cuisine": "Chọn loại ẩm thực:",
+    "filter_asia": "Châu Á",
+    "filter_europe": "Châu Âu",
+    "filter_street": "Đồ ăn đường phố",
+    "filter_vege": "Đồ chay",
+    "filter_all": "Hiển thị tất cả",
+    "welcome_message": "{user_name}, chào mừng đến với Karma System! 👋\n\n✨ Nhận giảm giá và ưu đãi độc quyền qua mã QR trong các danh mục tiện lợi:\n🍽️ Nhà hàng & Quán cà phê\n🧖‍♀️ SPA & Mát-xa\n🏍️ Thuê xe máy\n🏨 Khách sạn\n🚶‍♂️ Tour du lịch\n\nVà nếu bạn là chủ doanh nghiệp, hãy tham gia với chúng tôi với tư cách là đối tác và kết nối hệ thống khách hàng thân thiết của bạn! 🚀\n\nBắt đầu tiết kiệm ngay bây giờ - chọn một danh mục và nhận giảm giá của bạn!\n\nBằng cách tiếp tục sử dụng bot, bạn đồng ý với chính sách xử lý dữ liệu cá nhân.",
+    "policy_accept": "✅ Tôi đồng ý",
+    "policy_view": "📄 Chính sách bảo mật",
+    "policy_url": "https://example.com/privacy"
+}
