--- a/core/i18n/vi.json
+++ b/core/i18n/vi.json
@@ -65,5 +65,5 @@
     "welcome_message": "{user_name}, chào mừng đến với Karma System! 👋\n\n✨ Nhận giảm giá và ưu đãi độc quyền qua mã QR trong các danh mục tiện lợi:\n🍽️ Nhà hàng & Quán cà phê\n🧖‍♀️ SPA & Mát-xa\n🏍️ Thuê xe máy\n🏨 Khách sạn\n🚶‍♂️ Tour du lịch\n\nVà nếu bạn là chủ doanh nghiệp, hãy tham gia với chúng tôi với tư cách là đối tác và kết nối hệ thống khách hàng thân thiết của bạn! 🚀\n\nBắt đầu tiết kiệm ngay bây giờ - chọn một danh mục và nhận giảm giá của bạn!\n\nBằng cách tiếp tục sử dụng bot, bạn đồng ý với chính sách xử lý dữ liệu cá nhân.",
     "policy_accept": "✅ Tôi đồng ý",
     "policy_view": "📄 Chính sách bảo mật",
-    "policy_url": "https://example.com/privacy"
+    "policy_url": "/policy"
 }
