--- a/core/i18n/ru.json
+++ b/core/i18n/ru.json
@@ -56,5 +56,16 @@
   "catalog_empty_sub": "📭 В этой подкатегории пока нет заведений.",
   "transport_choose": "Выберите вид транспорта:",
   "tours_choose": "Выберите тип экскурсии:",
-  "choose_action": "Выберите действие"
+  "choose_action": "Выберите действие",
+  "actv_title": "🎯 Активность",
+  "actv_checkin": "Ежедневный чек-ин",
+  "actv_profile": "Заполнить профиль",
+  "actv_bindcard": "Привязать карту",
+  "actv_geocheckin": "Гео-чек-ин",
+  "actv_claim_ok": "✅ Баллы начислены",
+  "actv_cooldown": "⌛ Кулдаун активен. Попробуйте позже",
+  "actv_rule_disabled": "⛔ Активность недоступна",
+  "actv_geo_required": "📍 Требуется геолокация",
+  "actv_out_of_coverage": "📍 Вне зоны действия",
+  "actv_send_location_prompt": "📍 Отправьте геолокацию кнопкой ниже"
 }
